--- a/src/css/_box.scss
+++ b/src/css/_box.scss
@@ -1,112 +1,58 @@
+// TRIP CARD
+
 .box {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: 35% 65%;
   width: 23vw;
-  height: 100%;
+  height: 35vw;
   border-radius: 3px;
-  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1),
-    0.3em 0.3em 0.3em 0.1em rgba(0, 0, 0, 0.2),
-    0.5em 0.5em 0.5em 0.2em rgba(0, 0, 0, 0.2);
+  box-shadow: $shadow-heavy;
 }
 
 .box-top {
-  display: flex;
-  flex-flow: row nowrap;
-  height: 30%;
-  justify-content: space-between;
-  align-items: flex-start;
+  display: grid;
+  grid-template-rows: 50% 50%;
   padding: 1%;
   border-radius: 3px 3px 0 0;
-  background-color: rgba(51, 62, 133, 0.6);
-  flex-flow: row nowrap;
-}
-
-.box-bottom {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 70%;
-  border-radius: 0 0 3px 3px;
-  background-color: rgba(228, 248, 254, 0.941);
-  padding: 1.5vw;
+  background-color: rgba(244, 119, 41, 0.79);
 }
 
 .arrow {
   background-repeat: no-repeat;
-  width: 4vw;
-  height: 4vw;
+  width: 3vw;
+  height: 3vw;
   padding: 5% 0 0 5%;
 }
 
-.travelers-box {
+.box-top-lower {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  margin-bottom: 3%;
+  font-size: 1.5vw;
+  font-weight: bold;
+}
+
+.box-bottom {
+  display: grid;
+  grid-template-rows: 20% 20% 20% 20% 20%;
+  // justify-content: flex-start;
+  align-items: space-between;
+  padding: 1.5vw;
+  border-radius: 0 0 3px 3px;
+  background-color: rgba(228, 248, 254, 0.941);
+}
+
+.travel-info {
   flex-direction: column;
-  margin: 3% 3% 1% 2%;
-  justify-content: center;
-  align-items: center;
+  // justify-content: center;
+  // align-items: center;
+  width: 100%;
+  margin: 5% 2% 3% 2%;
 }
 
-.travelers-title {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+.data-small {
   font-size: 1vw;
-  color: #ffffffd6;
-}
-
-.travelers-num {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  font-size: 3vw;
-  color: #f8fafec3;
-}
-
-.trip-header {
-  justify-content: center;
-}
-
-.trip-name {
-  font-size: 1.5vw;
-  color: rgba(0, 0, 0, 0.873);
-  margin-bottom: 0.5vw;
-}
-
-.destination {
-  font-size: 1.25vw;
-  color: rgba(0, 0, 0, 0.633)
-}
-
-.info-box {
-  height: 3vw;
-  font-size: 0.9vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: rgba(0, 0, 0, 0.493);
-  background-color: rgba(0, 0, 0, 0.096);
-  padding: 0.75vw;
-}
-
-.date-box {
-  justify-content: center;
-}
-
-.title {
-  font-size: 1vw;
-  margin-bottom: 0.25vw;
+  // margin-bottom: 0.25vw;
   color: rgba(0, 0, 0, 0.893)
-}
-
-.date-num {
-  font-size: 1.5vw;
-  color: rgba(0, 0, 0, 0.934)
-}
-
-.status-box {
-  justify-content: center;
-}
-
-.status {
-  font-size: 2.25vw;
-  color: rgba(38, 122, 248, 0.685)
 }
