--- a/src/css/_main.scss
+++ b/src/css/_main.scss
@@ -1,28 +1,29 @@
-/* This is an example of using Sass, otherwise plain CSS works too*/
-$primary-background: radial-gradient(circle, rgba(25, 68, 198, 0.418) 0%, rgba(166, 189, 249, 0.66) 30%, rgba(73, 130, 245, 0.534) 50%, #458ef5b6 70%, #ffffffd5 100%);
-;
+// MAIN
 
-// main section
-
-body {
-  background: $primary-background;
-  height: 100%;
-  width: 100vw;
-  font-family: 'Open Sans',
-  sans-serif;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-// html {
-//   height: 100%;
-// }
+html {
+  height: 100%;
+}
+
+body {
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: 15% 15% 65%;
+  font-family: $primary-font;
+}
 
 main {
   display: flex;
   justify-content: center;
   height: 100%;
+  background: $primary-background;
 }
 
-/** box grid **/
+// BOX GRID
 
 .main-wrapper {
   display: flex;
@@ -37,9 +38,9 @@ main {
   align-items: center;
   height: 3vw;
   margin: 3% 0 3% 0;
-  font-size: 4vw;
+  font-size: 3vw;
   font-weight: bold;
-  color: #060708b3;
+  color: $primary-dark;
 }
 
 .box-grid {
