--- a/src/css/_booking.scss
+++ b/src/css/_booking.scss
@@ -2,8 +2,8 @@
 
 .booking-section {
   display: grid;
-  grid-template-rows: 40% 60%;
-  margin: 2% 15% 1% 15%;
+  grid-template-rows: 30% 70%;
+  margin: 3% 7% 1% 7%;
   box-shadow: $shadow-heavy;
   background: $primary-accent;
   color: $primary-dark;
@@ -12,21 +12,22 @@
 .booking-top {
   display: flex;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
   font-size: 2.5vw;
   font-weight: bold;
+  margin-top: 2%;
 }
 
 .booking-bottom {
   display: grid;
   grid-template-columns: 18% 18% 18% 18% 18%;
-  justify-content: space-around;
+  justify-content: center;
   align-items: flex-end;
-  margin: 1% 2% 1% 2%;
+  margin: 1% 1% 1% 2%;
 
   input, select {
-    max-height: 1.5vw;
-    max-width: 10vw;
+    max-height: 1.75vw;
+    max-width: 15vw;
     margin-top: 5%;
     font-size: 1vw;
   }
@@ -41,8 +42,8 @@
 .choice {
   display: flex;
   align-items: center;
-  justify-items: center;
-  padding: 5% 5% 1% 10%;
+  justify-content: center;
+  // padding: 5% 5% 1% 10%;
   height: 100%;
 }
 
@@ -54,7 +55,8 @@
   button {
     margin: 2%;
     padding: 2% 3% 2% 3%;
-    justify-self: center;
-    align-self: center;
+    // justify-self: center;
+    // align-self: center;
+    font-size: 1vw;
   }
 }
