--- a/src/css/_navbar.scss
+++ b/src/css/_navbar.scss
@@ -3,7 +3,7 @@
 header {
   display: grid;
   height: 100%;
-  grid-template-columns: 25% 50% 25%;
+  grid-template-columns: 20% 60% 20%;
   background: $primary-header;
   border-bottom: 0.1em solid rgba(6, 10, 21, 0.274);
   box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1),
@@ -62,8 +62,8 @@ header {
     justify-content: space-evenly;
     align-items: center;
     justify-self: center;
-    width: 11vw;
-    height: 3.5vw;
+    width: 14vw;
+    height: 3.25vw;
     padding: 3%;
     margin: 1% 3% 1% 3%;
     color: $white;
@@ -93,17 +93,17 @@ header {
   p {
     flex-direction: row wrap;
     justify-self: center;
-    margin: 10% 1% auto 10%;
+    margin: 20% 1% auto 8%;
     font-size: 2vw;
     font-weight: bold;
-    color:rgba(49, 22, 222, 0.938);
+    color:rgb(20, 25, 186);
   }
 
   button {
     width: 9vw;
-    height: 2.5vw;
-    font-size: 1.25vw;
-    margin: 10% 7% 2% 1%;
+    height: 2vw;
+    font-size: 0.8vw;
+    margin: 20% 7% 2% 3%;
     color: $white;
     background-color: $primary-dark;
   }
@@ -113,6 +113,6 @@ header {
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  margin-bottom: 3%;
-  font-size: 1.5vw;
+  margin-bottom: 7%;
+  font-size: 1.2vw;
 }
