--- a/src/css/_navbar.scss
+++ b/src/css/_navbar.scss
@@ -6,8 +6,7 @@ header {
   grid-template-columns: 20% 60% 20%;
   background: $primary-header;
   border-bottom: 0.1em solid rgba(6, 10, 21, 0.274);
-  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1),
-  0.3em 0.2em 0.1em rgba(0, 0, 0, 0.2);
+  box-shadow: $shadow-light;
 }
 
 // LEFT SIDE
@@ -68,6 +67,8 @@ header {
     margin: 1% 3% 1% 3%;
     color: $white;
     background-color: $primary-dark;
+    box-shadow: $shadow-light;
+    border: 1px solid rgb(159, 249, 174);
     font-size: 1.3vw;
     cursor: pointer;
   }
