--- a/src/css/_navbar.scss
+++ b/src/css/_navbar.scss
@@ -44,7 +44,7 @@ header {
     align-self: center;
     margin: 0%;
     font-size: 5vw;
-    color: rgba(1, 3, 5, 0.77);
+    color: rgba(15, 39, 61, 0.77);
   }
 }
 
@@ -68,7 +68,7 @@ header {
     color: $white;
     background-color: $primary-dark;
     box-shadow: $shadow-light;
-    border: 1px solid rgb(159, 249, 174);
+    border: 1px solid rgba(159, 249, 174, 0.774);
     font-size: 1.3vw;
     cursor: pointer;
   }
@@ -82,10 +82,10 @@ header {
 
 .nav-right {
   display: grid;
-  grid-template-rows: 33% 33% 33%;
+  grid-template-rows: 40% 40% 20%;
   // justify-content: flex-end;
   align-items: space-between;
-  margin: 10% 10% 5% 0;
+  margin: 7% 7% 5% 0;
 
   button {
     justify-self: flex-end;
@@ -95,16 +95,17 @@ header {
     font-size: 0.8vw;
     color: $white;
     background-color: $primary-dark;
+    border: 1px solid rgba(215, 247, 220, 0.671);
   }
 }
 
 .welcome {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   width: 100%;
-  font-size: 2vw;
+  font-size: 2.5vw;
   font-weight: bold;
   color: $primary-dark;
 }
@@ -112,7 +113,25 @@ header {
 .total-spent {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: space-around;
+  justify-self: center;
+  align-self: center;
   align-items: center;
+  width: 10vw;
+  height: 3.5vw;
+  background-color:#4ef981af;
+  // border: 1px solid rgba(7, 22, 9, 0.493);
+  box-shadow: $shadow-light;
+  color: rgba(1, 3, 5, 0.945);
+}
+
+.total-title {
+  font-size: 1vw;
+  font-weight: bold;
+  color: $primary-dark;
+}
+
+.total-amt {
   font-size: 1.2vw;
+  color: rgb(17, 34, 227);
 }
