--- a/src/css/_booking.scss
+++ b/src/css/_booking.scss
@@ -21,8 +21,8 @@
 .booking-bottom {
   display: grid;
   grid-template-columns: 18% 18% 18% 18% 18%;
-  justify-content: center;
-  align-items: flex-end;
+  justify-content: space-around;
+  // align-items: flex-end;
   margin: 1% 1% 1% 2%;
 
   input, select {
@@ -33,16 +33,19 @@
   }
 
   label {
-    justify-content: center;
-    align-items: center;
-    margin: auto 1% auto 1%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    margin-bottom: 8%;
   }
 }
 
 .choice {
   display: flex;
-  align-items: center;
+  flex-direction: row;
+  margin: 0;
   justify-content: center;
+  // align-items: center;
   // padding: 5% 5% 1% 10%;
   height: 100%;
 }
@@ -50,13 +53,12 @@
 .booking-btns {
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
   margin-left: 3%;
 
   button {
     margin: 2%;
     padding: 2% 3% 2% 3%;
-    // justify-self: center;
-    // align-self: center;
     font-size: 1vw;
   }
 }
