--- a/src/css/_navbar.scss
+++ b/src/css/_navbar.scss
@@ -2,8 +2,8 @@
 
 header {
   display: grid;
-  height: 100%;
   grid-template-columns: 20% 60% 20%;
+  max-height: 18vw;
   background: $primary-header;
   border-bottom: 0.1em solid rgba(6, 10, 21, 0.274);
   box-shadow: $shadow-light;
@@ -43,7 +43,7 @@ header {
     justify-self: center;
     align-self: center;
     margin: 0%;
-    font-size: 5vw;
+    font-size: 4vw;
     color: rgba(15, 39, 61, 0.77);
   }
 }
@@ -83,8 +83,6 @@ header {
 .nav-right {
   display: grid;
   grid-template-rows: 40% 40% 20%;
-  // justify-content: flex-end;
-  align-items: space-between;
   margin: 7% 7% 5% 0;
 
   button {
@@ -104,7 +102,9 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  align-self: center;
   width: 100%;
+  max-height: 4vw;
   font-size: 2.5vw;
   font-weight: bold;
   color: $primary-dark;
