--- a/src/css/_box.scss
+++ b/src/css/_box.scss
@@ -14,7 +14,9 @@
   grid-template-rows: 50% 50%;
   padding: 1%;
   border-radius: 3px 3px 0 0;
-  background-color: rgba(244, 119, 41, 0.79);
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow: hidden;
 }
 
 .arrow {
