--- a/src/css/_box.scss
+++ b/src/css/_box.scss
@@ -31,8 +31,17 @@
   justify-content: center;
   align-items: flex-end;
   margin-bottom: 3%;
-  font-size: 1.5vw;
-  font-weight: bold;
+
+  p {
+    justify-items: center;
+    padding: 3% 5% 3% 5%;
+    margin-bottom: 1%;
+    font-size: 1.5vw;
+    font-weight: bold;
+    color:hsl(214, 70%, 6%);
+    background-color:rgba(125, 218, 246, 0.695);
+    box-shadow: $shadow-light;
+  }
 }
 
 .box-bottom {
@@ -40,21 +49,23 @@
   grid-template-rows: 23% 23% 23% 23%;
   // justify-content: flex-start;
   align-items: space-between;
-  padding: 1.5vw;
+  padding: 1.6vw;
   border-radius: 0 0 3px 3px;
-  background-color: rgba(228, 248, 254, 0.941);
+  background: $primary-header;
 }
 
 .travel-info {
   flex-direction: column;
-  // justify-content: center;
-  // align-items: center;
   width: 100%;
   margin: 5% 2% 3% 2%;
+
+  label {
+    font-size: 1.5vw;
+  }
 }
 
 .data-small {
   font-size: 1.25vw;
   margin: 0.5vw auto 0.5vw auto;
-  color: rgb(57, 44, 28)
+  color: rgb(154, 31, 1)
 }
