--- a/src/css/_main.scss
+++ b/src/css/_main.scss
@@ -10,9 +10,9 @@ html {
 }
 
 body {
-  min-height: 100vh;
+  // min-height: 100vh;
   display: grid;
-  grid-template-rows: 15% 15% 70%;
+  // grid-template-rows: 15% 15% 70%;
   font-family: $primary-font;
 }
 
@@ -21,6 +21,7 @@ main {
   justify-content: center;
   height: 100%;
   background: $primary-background;
+  // background-image: url('../images/wood-backgrounds');
 }
 
 // BOX GRID
@@ -31,7 +32,7 @@ main {
   justify-content: flex-start;
   width: 94%;
   height: 100%;
-  min-height: 100vh;
+  // min-height: 100vh;
 }
 
 .box-grid-title {
