--- a/src/css/_main.scss
+++ b/src/css/_main.scss
@@ -14,14 +14,19 @@ body {
   display: grid;
   // grid-template-rows: 15% 15% 70%;
   font-family: $primary-font;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+
+  background-color: #FF3CAC;
+  background-image: linear-gradient(240deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
 }
 
 main {
   display: flex;
   justify-content: center;
   height: 100%;
-  background: $primary-background;
-  // background-image: url('../images/wood-backgrounds');
+  // background: $primary-background;
 }
 
 // BOX GRID
@@ -42,7 +47,7 @@ main {
   margin: 3% 0 3% 0;
   font-size: 3vw;
   font-weight: bold;
-  color: $primary-dark;
+  color: rgba(2, 13, 26, 0.849);
 }
 
 .box-grid {
