--- a/src/css/_navbar.scss
+++ b/src/css/_navbar.scss
@@ -4,8 +4,9 @@ header {
   display: grid;
   grid-template-columns: 20% 60% 20%;
   min-height: 16vw;
-  background: $primary-header;
-  border-bottom: 0.1em solid rgba(6, 10, 21, 0.274);
+  background-image: url('../images/thai-beach.png');
+  background-size: cover;
+  border-bottom: 0.6em solid rgba(6, 10, 21, 0.418);
   box-shadow: $shadow-light;
 }
 
@@ -44,7 +45,7 @@ header {
     align-self: center;
     margin: 0%;
     font-size: 4vw;
-    color: rgba(15, 39, 61, 0.77);
+    color: rgba(8, 24, 41, 0.582);
   }
 }
 
@@ -66,16 +67,25 @@ header {
     padding: 3%;
     margin: 1% 3% 1% 3%;
     color: $white;
-    background-color: $primary-dark;
+    background-color: rgba(21, 28, 63, 0.479);
     box-shadow: $shadow-light;
-    border: 1px solid rgba(159, 249, 174, 0.774);
+    border: 1px solid rgba(159, 249, 174, 0.534);
     font-size: 1.3vw;
     cursor: pointer;
+
+     &:hover {
+      background-color:rgba(249, 249, 119, 0.623);
+    }
+
   }
 
   i {
     margin: 0.5em;
   }
+}
+
+.active {
+  background-color:rgb(17, 227, 28);
 }
 
 // RIGHT SIDE
@@ -92,7 +102,7 @@ header {
     height: 2vw;
     font-size: 0.8vw;
     color: $white;
-    background-color: $primary-dark;
+    background-color: rgba(21, 28, 63, 0.479);
     border: 1px solid rgba(215, 247, 220, 0.671);
   }
 }
@@ -119,7 +129,7 @@ header {
   align-items: center;
   width: 10vw;
   height: 3.5vw;
-  background-color:#4ef981af;
+  background-color:#4ef98169;
   // border: 1px solid rgba(7, 22, 9, 0.493);
   box-shadow: $shadow-light;
   color: rgba(1, 3, 5, 0.945);
