--- a/src/css/_main.scss
+++ b/src/css/_main.scss
@@ -18,7 +18,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
 
-  background-color: #FF3CAC;
+  background-color: #bb3d84c0;
   background-image: linear-gradient(240deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
 }
 
