--- a/src/css/_navbar.scss
+++ b/src/css/_navbar.scss
@@ -31,6 +31,7 @@ header {
   max-height: 9vw;
   justify-self: center;
   align-self: center;
+  cursor: pointer;
 }
 
 // CENTER
@@ -44,8 +45,8 @@ header {
     justify-self: center;
     align-self: center;
     margin: 0%;
-    font-size: 4vw;
-    color: rgba(8, 24, 41, 0.582);
+    font-size: 4.5vw;
+    color: rgba(8, 24, 41, 0.715);
   }
 }
 
@@ -62,7 +63,7 @@ header {
     justify-content: space-evenly;
     align-items: center;
     justify-self: center;
-    width: 12vw;
+    width: 13vw;
     height: 3.25vw;
     padding: 3%;
     margin: 1% 3% 1% 3%;
@@ -74,7 +75,7 @@ header {
     cursor: pointer;
 
      &:hover {
-      background-color:rgba(249, 249, 119, 0.623);
+      background-color:rgba(142, 238, 240, 0.658);
     }
 
   }
@@ -104,6 +105,7 @@ header {
     color: $white;
     background-color: rgba(21, 28, 63, 0.479);
     border: 1px solid rgba(215, 247, 220, 0.671);
+    cursor: pointer;
   }
 }
 
