Build cost estimate modal functionality and styling

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1,6 +1,7 @@
 @import '_normalize';
 @import '_variables';
 @import '_login';
+@import '_modal';
 @import '_main';
 @import '_navbar';
 @import'_booking';
