--- a/src/css/_navbar.scss
+++ b/src/css/_navbar.scss
@@ -129,7 +129,7 @@ header {
   justify-self: center;
   align-self: center;
   align-items: center;
-  width: 10vw;
+  width: 12vw;
   height: 3.5vw;
   background-color:#4ef98169;
   // border: 1px solid rgba(7, 22, 9, 0.493);
@@ -140,10 +140,11 @@ header {
 .total-title {
   font-size: 1vw;
   font-weight: bold;
-  color: $primary-dark;
+  color: rgba(1, 3, 5, 0.945);
 }
 
 .total-amt {
   font-size: 1.2vw;
-  color: rgb(17, 34, 227);
+  color: $primary-dark;
+;
 }
