Complete user login functionality

--- a/src/css/_login.scss
+++ b/src/css/_login.scss
@@ -1,4 +1,4 @@
-.login {
+.login-page {
   display: flex;
   min-height: 80vh;
   height: 100%;
@@ -28,7 +28,7 @@
   input, label {
     max-width: 15vw;
     align-self: center;
-    margin-bottom: 2vw;
+    margin-bottom: 1vw;
   }
 }
 
