--- a/src/css/_main.scss
+++ b/src/css/_main.scss
@@ -19,14 +19,13 @@ body {
   background-attachment: fixed;
 
   background-color: #ee65b3c0;
-  background-image: linear-gradient(240deg, #FF3CAC 0%, #784BA0 40%, #2B86C5 100%);
+  background-image: linear-gradient(240deg, #ff3caaaf 0%, #784BA0 40%, #2B86C5 100%);
 }
 
 main {
   display: flex;
   justify-content: center;
   height: 100%;
-  // background: $primary-background;
 }
 
 // BOX GRID
