--- a/src/css/_modal.scss
+++ b/src/css/_modal.scss
@@ -11,6 +11,24 @@
   background-color: rgba(0,0,0,0.4);
 }
 
+.error-modal {
+  display: grid;
+  grid-template-rows: 20% 60%;
+  justify-content: center;
+  align-items: center;
+  width: 25vw;
+  height: 10vw;
+  margin: 20vw auto;
+  border: 1px solid rgb(136, 136, 136);
+  background-color: #fefefed9;
+  font-size: 1.5vw;
+
+  p {
+    margin: 5vw;
+    justify-self: center;
+  }
+}
+
 .cost-modal {
   display: grid;
   grid-template-rows: 20% 40% 40%;
@@ -40,24 +58,6 @@
   width: 30vw;
   height: 20vw;
   margin: 18vw auto;
-  border: 1px solid rgb(136, 136, 136);
-  background-color: #fefefed9;
-  font-size: 2vw;
-
-  p {
-    margin: 5vw;
-    justify-self: center;
-  }
-}
-
-.booking-error {
-  display: grid;
-  grid-template-rows: 20% 60%;
-  justify-content: center;
-  align-items: center;
-  width: 35vw;
-  height: 10vw;
-  margin: 20vw auto;
   border: 1px solid rgb(136, 136, 136);
   background-color: #fefefed9;
   font-size: 2vw;
