Refactor HTML to pass WAVE/Lighthouse tests

--- a/src/css/_box.scss
+++ b/src/css/_box.scss
@@ -32,7 +32,7 @@
   align-items: flex-end;
   margin-bottom: 3%;
 
-  p {
+  h2 {
     justify-items: center;
     padding: 3% 5% 3% 5%;
     margin-bottom: 1%;
@@ -59,7 +59,7 @@
   width: 100%;
   margin: 5% 2% 3% 2%;
 
-  label {
+  p {
     font-size: 1.5vw;
   }
 }
