--- a/src/css/_modal.scss
+++ b/src/css/_modal.scss
@@ -1,25 +1,28 @@
 .modal {
   display: none;
-  position: fixed; /* Stay in place */
-  overflow-x: scroll;
-  z-index: 1; /* Sit on top */
+  position: fixed;
+  width: 100%;
+  height: 100%;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
+  overflow-x: scroll;
+  z-index: 100;
+  padding: 1% 1% 1% 1%;
   background-color: rgba(0,0,0,0.4);
 }
 
 .error-modal {
   display: grid;
+  // position: absolute;
   grid-template-rows: 20% 60%;
+  z-index: 1000;
   justify-content: center;
   align-items: center;
-  width: 25vw;
+  width: 30vw;
   height: 10vw;
   margin: 20vw auto;
   border: 1px solid rgb(136, 136, 136);
+  border-radius: 7px;
   background-color: #fefefed9;
   font-size: 1.5vw;
 
@@ -55,8 +58,8 @@
   grid-template-rows: 20% 60%;
   justify-content: center;
   align-items: center;
-  width: 50vw;
-  height: 15vw;
+  width: 45vw;
+  height: 10vw;
   margin: 18vw auto;
   border: 1px solid rgb(136, 136, 136);
   background-color: #fefefed9;
@@ -70,10 +73,16 @@
 
 .close {
   justify-self: flex-end;
-  margin: 1vw;
+  margin: 1vw 1.25vw auto auto;
   font-size: 2vw;
   font-weight: bold;
   color: #aaa;
+  transition: .3s ease;
+
+  &:hover {
+    background: $offwhite;
+    transition: .3s ease;
+  }
 }
 
 .close:hover,
