--- a/src/css/_login.scss
+++ b/src/css/_login.scss
@@ -24,6 +24,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  color: rgba(138, 227, 243, 0.88);
 
   input, label {
     max-width: 15vw;
