--- a/src/css/_navbar.scss
+++ b/src/css/_navbar.scss
@@ -68,16 +68,15 @@ header {
     padding: 3%;
     margin: 1% 3% 1% 3%;
     color: $white;
-    background-color: rgba(21, 28, 63, 0.479);
+    background-color: rgba(48, 59, 114, 0.291);
     box-shadow: $shadow-light;
     border: 1px solid rgba(159, 249, 174, 0.534);
     font-size: 1.3vw;
     cursor: pointer;
 
      &:hover {
-      background-color:rgba(142, 238, 240, 0.315);
+      background-color: rgba(142, 238, 240, 0.212);
     }
-
   }
 
   i {
@@ -106,6 +105,10 @@ header {
     background-color: rgba(21, 28, 63, 0.479);
     border: 1px solid rgba(215, 247, 220, 0.671);
     cursor: pointer;
+    
+    &:hover {
+      background-color: rgba(43, 102, 104, 0.315);
+    }
   }
 }
 
@@ -117,7 +120,7 @@ header {
   align-self: center;
   width: 100%;
   max-height: 4vw;
-  font-size: 1.7vw;
+  font-size: 1.3vw;
   font-weight: bold;
   color: $primary-dark;
 }
@@ -131,8 +134,7 @@ header {
   align-items: center;
   width: 11vw;
   height: 2.75vw;
-  background-color:#4ef98169;
-  // border: 1px solid rgba(7, 22, 9, 0.493);
+  background-color: rgba(137, 225, 241, 0.397);
   box-shadow: $shadow-light;
   color: rgba(1, 3, 5, 0.945);
 }
@@ -146,5 +148,4 @@ header {
 .total-amt {
   font-size: 1.2vw;
   color: $primary-dark;
-;
 }
