--- a/src/css/_main.scss
+++ b/src/css/_main.scss
@@ -49,14 +49,36 @@ main {
 
 .card-grid {
   display: grid;
-  grid-template-columns: 24% 24% 24% 24%;
-  grid-column-gap: 1.4%;
-  grid-row-gap: 1.4%;
-  justify-items: center;
+  grid-template-columns: 23% 23% 23% 23%;
+  // grid-column-gap: 1%;
+  grid-row-gap: 1.5%;
+  justify-content: space-evenly;
   align-content: flex-start;
   width: 100%;
   height: 100%;
-  margin-bottom: 30%;
+  margin-bottom: 5%;
+}
+
+@media screen and (max-width: 1050px) {
+  .card-grid {
+    grid-template-columns: 30% 30% 30%;
+    grid-row-gap: 2%;
+  }
+}
+
+@media screen and (max-width: 625px) {
+  .card-grid {
+    grid-template-columns: 44% 44%;
+    grid-row-gap: 2%;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .card-grid {
+    grid-template-columns: 75%;
+    grid-row-gap: 1%;
+    margin-top: 3vw;
+  }
 }
 
 .hidden {
