--- a/src/css/_main.scss
+++ b/src/css/_main.scss
@@ -1,4 +1,4 @@
-// MAIN
+// MAIN SECTION
 
 * {
   margin: 0;
@@ -37,20 +37,21 @@ main {
   // min-height: 100vh;
 }
 
-.card-grid-title {
+/** four card width **/
+
+.grid-title {
   display: flex;
   align-items: center;
   height: 3vw;
-  margin: 3% 0 3% 0;
-  font-size: 3vw;
-  font-weight: bold;
-  color: rgba(2, 13, 26, 0.849);
+  margin: 4% 0 4% 1.5%;
+  font-size: 3.5vw;
+  font-weight: 400;
+  color: rgba(181, 249, 250, 0.849);
 }
 
 .card-grid {
   display: grid;
   grid-template-columns: 23% 23% 23% 23%;
-  // grid-column-gap: 1%;
   grid-row-gap: 1.5%;
   justify-content: space-evenly;
   align-content: flex-start;
@@ -59,27 +60,50 @@ main {
   margin-bottom: 5%;
 }
 
-@media screen and (max-width: 1050px) {
+/** three card width **/
+
+@media screen and (min-width: 626px) and (max-width: 1050px) {
+  .grid-title {
+    font-size: 4vw;
+    margin: 5% 0 5% 1.5%;
+  }
+
   .card-grid {
-    grid-template-columns: 30% 30% 30%;
-    grid-row-gap: 2%;
+    grid-template-columns: 31% 31% 31%;
+    grid-row-gap: 1.75%;
   }
 }
 
-@media screen and (max-width: 625px) {
+/** two card width **/
+
+@media screen and (min-width: 375px) and (max-width: 625px) {
+  .grid-title {
+    margin: 5% 0 5% 2.7%;
+    font-size: 4.5vw;
+  }
+
   .card-grid {
-    grid-template-columns: 44% 44%;
-    grid-row-gap: 2%;
+    grid-template-columns: 45% 45%;
+    grid-column-gap: 1.5%;
+    grid-row-gap: 1.75%;
   }
 }
 
-@media screen and (max-width: 350px) {
+/** one card width **/
+
+@media screen and (max-width: 375px) {
+  .grid-title {
+    margin: 8% 0 7% 10%;
+    font-size: 5.5vw;
+  }
+  
   .card-grid {
-    grid-template-columns: 75%;
+    grid-template-columns: 80%;
     grid-row-gap: 1%;
-    margin-top: 3vw;
   }
 }
+
+// TOGGLED CLASSES
 
 .hidden {
   display: none;
