Complete login and modal responsiveness

--- a/src/css/_modal.scss
+++ b/src/css/_modal.scss
@@ -5,7 +5,6 @@
   height: 100%;
   left: 0;
   top: 0;
-  overflow-x: scroll;
   z-index: 100;
   padding: 1% 1% 1% 1%;
   background-color: rgba(0,0,0,0.4);
@@ -17,16 +16,26 @@
   z-index: 1000;
   justify-content: center;
   align-items: center;
-  width: 50vw;
-  height: 7vw;
-  margin: 20vw auto;
+  width: 40%;
+  height: 15%;
+  margin: 20% auto;
   border: 1px solid rgb(136, 136, 136);
   border-radius: 7px;
   background-color: #fefefed9;
-  font-size: 2vw;
+  font-size: 1.5rem;
+
+  @media screen and (max-width: 800px) {
+    margin-top: 50vw;
+    width: 70%;
+    font-size: 1rem;
+  }
+
+  @media screen and (max-width: 500px) {
+    margin-top: 70vw;
+    width: 80%;
+  }
 
   p {
-    margin: 5vw;
     justify-self: center;
   }
 }
@@ -72,14 +81,12 @@
 
 .close {
   justify-self: flex-end;
-  margin: 1vw 1.25vw auto auto;
-  font-size: 2vw;
+  font-size: 2rem;
   font-weight: bold;
   color: #aaa;
-  transition: .3s ease;
+  // transition: .3s ease;
 
   &:hover {
-    background: $offwhite;
     transition: .3s ease;
   }
 }
