Assign final color scheme

--- a/src/css/_login.scss
+++ b/src/css/_login.scss
@@ -43,7 +43,7 @@
   align-items: center;
   width: 60%;
   padding: 1vw;
-  background-color: rgba(87, 247, 154, 0.712);
+  background-color: $primary-accent;
   box-shadow: $shadow-heavy;
   color: rgba(4, 5, 5, 0.921);
 
