--- a/src/css/_modal.scss
+++ b/src/css/_modal.scss
@@ -84,7 +84,8 @@
   font-size: 2rem;
   font-weight: bold;
   color: #aaa;
-  // transition: .3s ease;
+  margin-top: 1vw;
+  margin-right: 1vw;
 
   &:hover {
     transition: .3s ease;
