--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -2,7 +2,7 @@
 
 $primary-background: linear-gradient(#ffffff, #ecf6f5);
 $primary-header: linear-gradient(#eaf6fae1, #53b9e9);
-$primary-accent: linear-gradient(#4ef981e6, #7dc573de, #457e3daa);
+$primary-accent: rgba(249, 215, 78, 0.489);
 $primary-dark: rgba(21, 28, 63, 0.756);
 
 $white: #ffffff;
