--- a/src/css/_navbar.scss
+++ b/src/css/_navbar.scss
@@ -106,12 +106,12 @@ header {
     height: 2vw;
     font-size: 0.8vw;
     color: $white;
-    background-color: rgba(21, 28, 63, 0.479);
+    background-color: rgba(21, 63, 57, 0.479);
     border: 1px solid rgba(215, 247, 220, 0.671);
     cursor: pointer;
     
     &:hover {
-      background-color: rgba(43, 102, 104, 0.315);
+      background-color: rgba(62, 152, 221, 0.315);
     }
   }
 }
@@ -138,7 +138,7 @@ header {
   align-items: center;
   width: 12vw;
   height: 3.5vw;
-  background-color: rgba(146, 126, 140, 0.315);
+  background-color: $primary-accent;
   box-shadow: $shadow-light;
   color: rgba(1, 3, 5, 0.945);
 }
